applications/scratch-7804489/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: scratch-7804489
  namespace: scratch

spec:
  replicas: 1

  selector:
    matchLabels:
      app: scratch-7804489

  template:
    metadata:
      labels:
        app: scratch-7804489

    spec:
      containers:
      - name: scratch-7804489
        image: scratch:latest

        ports:
        - containerPort: 80
