applications/scratch-7804489/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: scratch-7804489
  namespace: scratch

spec:
  selector:
    app: scratch-7804489

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
